translated python tests for stage3-4

--- a/File Server/stage1/task-info.yaml
+++ b/File Server/stage1/task-info.yaml
@@ -2,9 +2,5 @@ type: edu
 files:
 - name: tests.py
   visible: true
-- name: server.go
-  visible: true
-- name: python_solution/server.py
-  visible: true
-- name: server.exe
+- name: src/server/Main.java
   visible: true
